--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/solid.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/fontawesome.css">
   <link rel="stylesheet" href="https://unpkg.com/mustard-ui@latest/dist/css/mustard-ui.min.css">
-  <title>JS Prepare</title>
+  <title>Блог</title>
 </head>
 <body>
 <header id="header">
-  <h1 class="title">БЛОГ 001001</h1>
+  <h1 class="title">Блог Александра Шувалова</h1>
   <h2 class="subtitle">Создавайте статьи и добавляйте их в избранное</h2>
   <button class="get-started button button-primary button-large js-header-start">Приступить</button>
 </header>
